index.css
body {
  position: relative;
  min-width: 320px;
  margin: 0;
  padding: 30px;
  background-color: #fff;
  user-select: none;
}

.drag-area,
.draggable-item,
.dropped-item {
  box-sizing: border-box;
  width: 100px;
  height: 100px;
  border: 1px solid #000;
}

.draggable-item {
  z-index: 1;
}

.draggable-item_hidden {
  display: none;
}

.draggable-item,
.dropped-item_canvas {
  position: absolute;
}

.container {
  display: flex;
  margin-top: 30px;
  column-gap: 30px;
}

.drop-area {
  box-sizing: border-box;
  width: calc(50% - 15px);
  overflow: auto;
  border: 1px dashed #000;
  aspect-ratio: 1 / 1;
}

.drop-area_highlighted {
  background-color: #ededed;
}

.drop-area_grid {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  padding: 10px;
  gap: 10px;
}

.drop-area_canvas {
  position: relative;
}

